logs/validate.20260408-013755.log
Mode: isolate
Isolate: including Chap18 Chap19 Chap02 Chap51
error: unexpected token, expected `;`
   --> src/Chap51/TopDownDPMtEph.rs:475:21
    |
475 |                     current@[(a, b)] as nat == spec_med_fn(seq_s@, seq_t@, a as nat, b as nat)
    |                     ^^^^^^^

error[E0425]: cannot find type `TopDownDPMtEphS` in this scope
   --> src/Chap51/TopDownDPMtEph.rs:554:20
    |
554 |     impl Debug for TopDownDPMtEphS {
    |                    ^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `TopDownDPMtEphS` in this scope
   --> src/Chap51/TopDownDPMtEph.rs:563:22
    |
563 |     impl Display for TopDownDPMtEphS {
    |                      ^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `TopDownDPMtEphInv` in this scope
   --> src/Chap51/TopDownDPMtEph.rs:576:20
    |
576 |     impl Debug for TopDownDPMtEphInv {
    |                    ^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `TopDownDPMtEphInv` in this scope
   --> src/Chap51/TopDownDPMtEph.rs:582:22
    |
582 |     impl Display for TopDownDPMtEphInv {
    |                      ^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 2s
Sampled Memory Usage: peak rust_verify RSS: 2469MB, peak z3 RSS: 0MB, min free: 23661MB
Sampled CPU Usage: rust_verify: 31s, z3 children: 12s
